--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
     color: #66BFBF;
     font-size: 60px;
     line-height: 2;
-    margin-top: 50px auto;
+    margin-top: 50px;
     font-family:'Sacramento', cursive;
   }
 h2{
@@ -29,7 +29,6 @@ h3{
   position: relative;
   padding-top: 100px;
   background-color: #e3fdfd;
-
 }
 
 
