--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,6 @@ h3{
   font-family: 'Sacramento', cursive;
 }
 .top-container{
-  background-color: white;
   position: relative;
   padding-top: 100px;
   background-color: #e3fdfd;
@@ -57,7 +56,7 @@ a:hover{
   padding: 20px 0;
 }
 hr{
-  border: dotted #EAF6F6 6px;
+  border: dotted;
   border-bottom: none;
   width: 4%;
   margin: 100px auto;
@@ -150,3 +149,4 @@ margin-right: 30px;
 .btn {
   margin-bottom: 40px;
 }
+
